--- a/src/style.css
+++ b/src/style.css
@@ -24,6 +24,15 @@ footer {
   background-color: #09415d;
   padding: 10px 70px;
 }
+a {
+  text-decoration: none;
+  color: #f9faf8;
+}
+#top-sign {
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 5px 10px;
+}
 footer {
   text-align: center;
   font-size: 20px;
@@ -34,7 +43,7 @@ footer {
   border-radius: 50%;
   position: relative;
   top: 30px;
-  right: 65px;
+  right: 70px;
 }
 header {
   font-size: 20px;
@@ -173,6 +182,9 @@ h2 {
   padding: 10px 0 0;
   color: #09415d;
   transition: 200ms all ease-in-out;
+}
+h3 {
+  text-align: center;
 }
 @media only screen and (max-width: 850px) {
   #grid {
