--- a/src/style.css
+++ b/src/style.css
@@ -56,7 +56,7 @@ ul {
   display: flex;
 }
 ul li {
-  margin-left: 15px;
+  margin: 10px 30px;
   font-size: 18px;
 }
 .cap {
@@ -132,6 +132,7 @@ img {
   margin: 0 auto;
   border-radius: 20px;
 }
+
 .secDiv-2 {
   margin: 0 25px;
   padding: 5px 50px;
@@ -191,7 +192,7 @@ h3 {
     flex-wrap: wrap;
   }
 }
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 860px) {
   .nav-head {
     flex-direction: column;
     justify-content: space-evenly;
@@ -207,7 +208,7 @@ h3 {
   }
   .title {
     width: 70%;
-    max-width: 400px;
+    max-width: 600px;
     left: 10%;
   }
 }
